# qsentia-brppo-macro-rotation-alpaca

./: .gitignore  README.md  pyproject.toml
.github/workflows/: paper-rebalance.yml
config/: frozen_strategy.json
docs/: expansion_and_paper_gate.md
logs/: latest_orders.csv  latest_signal.json  rebalance_20260526_160237.json  rebalance_20260527_160401.json  rebalance_20260528_163226.json  rebalance_20260529_160451.json
logs/decisions/: decisions.csv  latest_decision.csv
logs/health/: health_status.json  signal_history.csv
logs/orders/: latest_planned_orders.csv  latest_submitted_orders.csv  submitted_orders.csv
logs/portfolio/: portfolio.csv
logs/positions/: latest_positions.csv
logs/target_weights/: latest_target_weights.csv  target_weights.csv
scripts/: run_paper_rebalance.py
src/qsentia_brppo_macro_alpaca/: __init__.py  alpaca.py  config.py  dashboard_logs.py  data.py  rebalance.py  strategy.py
tests/: test_strategy.py
